--- a/app.css
+++ b/app.css
@@ -3,7 +3,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: rgb(17, 0, 37);
+    background-color: orchid;
 }
 
 h1{
