--- a/sqlalchemy/blogly/templates/users/show.html
+++ b/sqlalchemy/blogly/templates/users/show.html
@@ -1,10 +1,22 @@
 {% extends 'base.html' %}
 {% block title %}{{user.full_name}}{% endblock %}
 {% block content %}
+{% if user.img_url %}
 <img src="{{user.img_url}}" alt="{{user.full_name}}">
-<h2>{{user.full_name}}</h2>
+{% endif %}
+<h1>{{user.full_name}}</h1>
 <form>
     <button formaction="/users/{{ user.id }}/edit" formmethod="GET">Edit</button>
     <button formaction="/users/{{ user.id }}/delete" formmethod="POST">Delete</button>
 </form>
+<h2>Posts</h2>
+<ul>
+    {% for post in posts %}
+    <li>
+        <p><a href="/posts/{{post.id}}">{{post.title}}</a></p>
+        <p>{{post.readable_date}}</p>
+    </li>
+    {% endfor %}
+</ul>
+<p><a href="/users/{{user.id}}/posts/new">ADD NEW POST</a></p>
 {% endblock %}
