--- a/sqlalchemy/blogly/templates/posts/edit.html
+++ b/sqlalchemy/blogly/templates/posts/edit.html
@@ -10,4 +10,5 @@
     <a href="/users/{{post.user.id}}">CANCEL</a>
     <button type="submit">EDIT</button>
 </form>
+<p><a href="/users">All Users</a></p>
 {% endblock %}
