--- a/sqlalchemy/blogly/templates/posts/new.html
+++ b/sqlalchemy/blogly/templates/posts/new.html
@@ -10,4 +10,5 @@
     <a href="/users/{{user.id}}">CANCEL</a>
     <button type="submit">ADD</button>
 </form>
+<p><a href="/users">All Users</a></p>
 {% endblock %}
