--- a/sqlalchemy/blogly/templates/posts/show.html
+++ b/sqlalchemy/blogly/templates/posts/show.html
@@ -9,4 +9,5 @@
     <button formmethod="GET" formaction="/posts/{{post.id}}/edit">EDIT</button>
     <button formmethod="POST" formaction="/posts/{{post.id}}/delete">DELETE</button>
 </form>
+<p><a href="/users">All Users</a></p>
 {% endblock %}
