--- a/sqlalchemy/blogly/templates/users/edit.html
+++ b/sqlalchemy/blogly/templates/users/edit.html
@@ -13,5 +13,5 @@
     <a href="/users" class="btn btn-outline-info">Cancel</a>
     <button type="submit">Save</button>
 </form>
-
+<p><a href="/users">All Users</a></p>
 {% endblock %}
