--- a/sqlalchemy/blogly/templates/users/new.html
+++ b/sqlalchemy/blogly/templates/users/new.html
@@ -13,5 +13,5 @@
     <input type="text" id="img_url" name="img_url" placeholder="User profile image url">
     <button type="submit">ADD</button>
 </form>
-
+<p><a href="/users">All Users</a></p>
 {% endblock %}
