--- a/sqlalchemy/blogly/templates/users/show.html
+++ b/sqlalchemy/blogly/templates/users/show.html
@@ -19,4 +19,5 @@
     {% endfor %}
 </ul>
 <p><a href="/users/{{user.id}}/posts/new">ADD NEW POST</a></p>
+<p><a href="/users">All Users</a></p>
 {% endblock %}
