--- a/sqlalchemy/blogly/templates/posts/edit.html
+++ b/sqlalchemy/blogly/templates/posts/edit.html
@@ -7,6 +7,12 @@
     <input type="text" name="title" id="title" value="{{post.title}}">
     <label for="content">Content: </label>
     <input type="text" name="content" id="content" value="{{post.content}}">
+
+    {% for tag in tags %}
+      <input type='checkbox' value='{{ tag.id }}' id='tag_{{ tag.id }}' name='tags'>
+      <label for='tag_{{ tag.id }}'>{{ tag.name }}</label>
+    {% endfor %}
+
     <a href="/users/{{post.user.id}}">CANCEL</a>
     <button type="submit">EDIT</button>
 </form>
