--- a/sqlalchemy/blogly/templates/posts/homepage.html
+++ b/sqlalchemy/blogly/templates/posts/homepage.html
@@ -6,6 +6,17 @@
 <h2><a href="/posts/{{post.id}}">{{post.title}}</a></h2>
 <p>{{post.content}}</p>
 <p>{{post.user.full_name}} {{post.readable_date}}</p>
+
+{% if post.tags%}
+<p>
+    <em>Tags: </em>
+    {% for tag in post.tags %}
+    <a href="/tags/{{tag.id}}">{{tag.name}}</a>
+    {% endfor %}
+</p>
+{% endif %}
+
 {% endfor %}
 <p><a href="/users">All Users</a></p>
+<p><a href="/tags">All Tags</a></p>
 {% endblock %}
