--- a/sqlalchemy/blogly/templates/posts/show.html
+++ b/sqlalchemy/blogly/templates/posts/show.html
@@ -4,6 +4,16 @@
 <h1>{{post.title}}</h1>
 <p>{{post.content}}</p>
 <p>Posted by: {{post.user.full_name}} on {{post.readable_date}}</p>
+
+{% if post.tags%}
+<p>
+    <em>Tags: </em>
+    {% for tag in post.tags %}
+    <a href="/tags/{{tag.id}}">{{tag.name}}</a>
+    {% endfor %}
+</p>
+{% endif %}
+
 <form>
     <button formmethod="GET" formaction="/users/{{post.user_id}}">CANCEL</button>
     <button formmethod="GET" formaction="/posts/{{post.id}}/edit">EDIT</button>
