added styles and test file

--- a/sqlalchemy/blogly/templates/base.html
+++ b/sqlalchemy/blogly/templates/base.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/journal/bootstrap.min.css">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    {% block content %}{% endblock %}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">Blogly</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link" href="/users">All Users</a>
+            <a class="nav-item nav-link" href="/tags">All Tags</a>
+            <a class="nav-item nav-link" href="/allposts">All Posts</a>
+          </div>
+        </div>
+      </nav>
+    <div class="container">
+        <div class="mt-5">
+        {% block content %}{% endblock %}
+        </div>
+    </div>
 </body>
 </html>
