--- a/sqlalchemy/blogly/templates/posts/edit.html
+++ b/sqlalchemy/blogly/templates/posts/edit.html
@@ -13,8 +13,7 @@
       <label for='tag_{{ tag.id }}'>{{ tag.name }}</label>
     {% endfor %}
 
-    <a href="/users/{{post.user.id}}">CANCEL</a>
-    <button type="submit">EDIT</button>
+    <a href="/users/{{post.user.id}}" class="btn btn-outline-danger">CANCEL</a>
+    <button type="submit" class="btn btn-outline-info">EDIT</button>
 </form>
-<p><a href="/users">All Users</a></p>
 {% endblock %}
