--- a/sqlalchemy/blogly/templates/users/new.html
+++ b/sqlalchemy/blogly/templates/users/new.html
@@ -11,7 +11,7 @@
 
     <label for="img_url">Image URL</label>
     <input type="text" id="img_url" name="img_url" placeholder="User profile image url">
-    <button type="submit">ADD</button>
+    <a href="/users" class="btn btn-outline-danger">Cancel</a>
+    <button type="submit" class="btn btn-outline-info">ADD</button>
 </form>
-<p><a href="/users">All Users</a></p>
 {% endblock %}
