--- a/sqlalchemy/blogly/templates/404.html
+++ b/sqlalchemy/blogly/templates/404.html
@@ -3,5 +3,5 @@
 {% block content %}
     <h1>This page does not exist or has been moved!</h1>
     <h2>404, page not found.</h2>
-    <p><a href="/">Go back to home page.</a></p>
+    <p><a href="/" class="btn btn-outline-info">Go back to home page.</a></p>
 {% endblock %}
