--- a/sqlalchemy/blogly/templates/tags/index.html
+++ b/sqlalchemy/blogly/templates/tags/index.html
@@ -9,7 +9,5 @@
     {% endfor %}
 </ul>
 
-<p><a href="/tags/new">Add New Tag</a></p>
-
-<p><a href="/users">All Users</a></p>
+<a href="/tags/new" class="btn btn-outline-info">Add New Tag</a>
 {% endblock %}
