--- a/sqlalchemy/flask-cupcakes/templates/index.html
+++ b/sqlalchemy/flask-cupcakes/templates/index.html
@@ -7,6 +7,8 @@
     <title>Cupcakes</title>
 </head>
 <body>
+    <h1>Look at all these cupcakes!</h1>
     <ul id="all-cupcakes"></ul>
+    <h2>Add another cupcake!</h2>
 </body>
 </html>
