--- a/flask/flask-feedback/templates/users/show.html
+++ b/flask/flask-feedback/templates/users/show.html
@@ -7,8 +7,8 @@
         <ul>
             {% for feedback in user.feedback %}
             <li>
-                {{feedback.title(class'fs-3')}}<br>
-                {{feedback.title(class'fs-5')}}
+                {{feedback.title(class='fs-3')}}<br>
+                {{feedback.title(class='fs-5')}}
             </li>
             <form action="">
                 {{form.hidden_tag()}}
