--- a/warbler/templates/users/followers.html
+++ b/warbler/templates/users/followers.html
@@ -30,7 +30,8 @@
                 {% endif %}
 
               </div>
-              <p class="card-bio">BIO HERE</p>
+              <p class="card-bio">{{follower.bio}}</p>
+              <p class="card-bio"><span class="fa fa-map-marker"></span>{{follower.location}}</p>
             </div>
           </div>
         </div>
