--- a/warbler/templates/users/following.html
+++ b/warbler/templates/users/following.html
@@ -28,7 +28,8 @@
                 {% endif %}
 
               </div>
-              <p class="card-bio">BIO HERE</p>
+              <p class="card-bio">{{followed_user.bio}}</p>
+              <p class="card-bio"><span class="fa fa-map-marker"></span>{{followed_user.location}}</p>
             </div>
           </div>
         </div>
