--- a/sqlalchemy/blogly/templates/404.html
+++ b/sqlalchemy/blogly/templates/404.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
-{% block title %}{% endblock %}
 {% block content %}
+<div class="text-center mt-5">
     <h1>This page does not exist or has been moved!</h1>
     <h2>404, page not found.</h2>
-    <p><a href="/" class="btn btn-outline-info">Go back to home page.</a></p>
+    <p><a href="/" class="btn btn-lg btn-block btn-outline-info">Go back</a></p>
+</div>
 {% endblock %}
