--- a/react/react-lights-out/src/App.css
+++ b/react/react-lights-out/src/App.css
@@ -1,3 +1,12 @@
 .App {
   text-align: center;
 }
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: #101010;
+}
