--- a/react/react-lights-out/src/Cell.css
+++ b/react/react-lights-out/src/Cell.css
@@ -1,10 +1,11 @@
 .Cell {
   height: 100px;
   width: 100px;
-  background-color: darkgray;
+  background-color: #263238;
   cursor: pointer;
+  transition: background-color 0.5s ease;
 }
 
 .Cell-lit {
-  background-color: white;
+  background-color: #90dce6;
 }
