--- a/react/react-forms/todo-app/src/index.css
+++ b/react/react-forms/todo-app/src/index.css
@@ -1,13 +1,10 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body {
+  background: linear-gradient(90deg,rgb(41, 83, 36),rgb(14, 148, 81),rgb(44, 104, 145));
+  font-size: 1.5rem;
+  font-family: 'Helvetica', sans-serif;
+  height: 100%;
 }
