--- a/react/react-forms/todo-app/src/Todo.scss
+++ b/react/react-forms/todo-app/src/Todo.scss
@@ -40,6 +40,9 @@
         font-family: 'Helvetica', sans-serif;
         height: 3rem;
     }
+    p{
+        font-size: 0;
+    }
 }
 .Todo-task{
     position: relative;
