--- a/react/react-forms/todo-app/src/TodoList.scss
+++ b/react/react-forms/todo-app/src/TodoList.scss
@@ -15,12 +15,12 @@
         font-size: 2.6rem;
         letter-spacing: 0.05;
         border-bottom: 1px solid rgba($color: #fff, $alpha: .3);
-    };
-    h1 span{
-        display: block;
-        font-size: 0.8rem;
-        margin-bottom: .7rem;
-        margin-left: 3px;
-        margin-top: .2rem;
+        span{
+            display: block;
+            font-size: 0.8rem;
+            margin-bottom: .7rem;
+            margin-left: 3px;
+            margin-top: .2rem;
+        };
     };
 };
