added 404 page, and some styles

--- a/jobly/react-jobly/frontend/src/components/header/header.style.scss
+++ b/jobly/react-jobly/frontend/src/components/header/header.style.scss
@@ -31,11 +31,13 @@
             &:last-of-type{
                 margin-right: 30px;
             }
+            &:hover{
+                color: #c1cfdb;
+            }
+            &.is-active, .is-active:hover{
+                color: #91a6b8;
+            }
         }
 
-    }
-
-    .is-active{
-        color: #b8cad9;
     }
 }
