--- a/jobly/react-jobly/frontend/src/components/custom-button/custom-button.styles.scss
+++ b/jobly/react-jobly/frontend/src/components/custom-button/custom-button.styles.scss
@@ -13,6 +13,7 @@
     font-weight: bolder;
     border: none;
     cursor: pointer;
+    border: 1px solid rgba(255, 255, 255, 0);
 
     &:hover{
         background-color: #fff;
