--- a/jobly/react-jobly/frontend/src/components/header/header.style.scss
+++ b/jobly/react-jobly/frontend/src/components/header/header.style.scss
@@ -1,10 +1,12 @@
 .header{
+    position: sticky;
+    top: 0;
     background-color: #555;
     height: 60px;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 25px;
+    margin-bottom: 50px;
 
     .logo-container{
         height: 100%;
