--- a/jobly/react-jobly/frontend/src/pages/homepage/homepage.styles.scss
+++ b/jobly/react-jobly/frontend/src/pages/homepage/homepage.styles.scss
@@ -12,3 +12,17 @@
     }
 }
 
+.logged-homepage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 80px;
+  }
+  
+  .directory-menu {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
