--- a/jobly/react-jobly/frontend/src/components/header/header.style.scss
+++ b/jobly/react-jobly/frontend/src/components/header/header.style.scss
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 50px;
+    z-index: 1;
 
     .logo-container{
         height: 100%;
