applying to jobs

--- a/jobly/react-jobly/frontend/src/components/custom-button/custom-button.styles.scss
+++ b/jobly/react-jobly/frontend/src/components/custom-button/custom-button.styles.scss
@@ -20,4 +20,12 @@
         color: #555;
         border: 1px solid #555;
     }
+    &:disabled{
+        margin-top: 10px;
+        border: 1px solid #fff;
+        color: #555;
+        background-color: #fff;
+        display: inline-block;
+        cursor: not-allowed !important;
+    }
 }
